# hallo2

./: pyproject.toml
src/hallo/scripts/: inference.py
