[project]
name = "hallo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chenghao Mou", email = "chenghao.mou@itramei.com" }
]
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.28.0",
    "audio-separator>=0.17.2",
    "av>=12.1.0",
    "bitsandbytes>=0.43.1",
    "decord>=0.6.0",
    "diffusers>=0.27.2",
    "einops>=0.8.0",
    "ffmpeg-python>=0.2.0",
    "gradio>=4.36.1",
    "icecream>=2.1.3",
    "insightface>=0.7.3",
    "isort>=5.13.2",
    "librosa>=0.10.2.post1",
    "loguru>=0.7.2",
    "lpips>=0.1.4",
    "mediapipe[vision]>=0.10.14",
    "mlflow>=2.13.1",
    "moviepy>=1.0.3",
    "numpy>=1.26.4",
    "omegaconf>=2.3.0",
    "onnx2torch>=1.5.14",
    "onnx>=1.16.1",
    "onnxruntime-gpu>=1.18.0",
    "opencv-contrib-python>=4.9.0.80",
    "opencv-python-headless>=4.9.0.80",
    "opencv-python>=4.9.0.80",
    "pillow>=10.3.0",
    "pre-commit>=3.7.1",
    "pylint>=3.2.2",
    "setuptools>=70.0.0",
    "tqdm>=4.66.4",
    "transformers>=4.39.2",
    "xformers>=0.0.25.post1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "fastapi>=0.115.3",
    "uvicorn>=0.32.0",
    "websockets>=11.0.3",
]
